--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,17 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/textView_side"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Side 1"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/progress_countdown"
+        />
+
+    <TextView
         android:id="@+id/textView_countdown"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
