Added a pancake counter

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,18 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/textView_pancakecount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:textSize="20sp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/textView_side"
+        />
+
+    <TextView
         android:id="@+id/textView_side"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
