--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="colorPrimaryPale">#4D009292</color>
     <color name="colorPrimary">#009292</color>
     <color name="colorPrimaryDark">#004949</color>
     <color name="colorAccent">#ff6db6</color>
