--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".SettingsActivity">
 
-    <RadioGroup
+    <com.example.pancaketimer.customviews.RadioGroupTable
         android:id="@+id/radioGroup_settings"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -20,29 +20,47 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <RadioButton
-            android:id="@+id/radioButton_pancakemode"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Pancake" />
+        <TableRow>
+            <RadioButton
+                android:id="@+id/radioButton_pancakemode"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Pancake" />
 
-        <RadioButton
-            android:id="@+id/radioButton_crepemode"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Crepe" />
+            <TextView
+                android:id="@+id/textView_pancakeDefaults"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="32dp"
+                android:layout_weight="1"
+                android:text="Side 1 (secs)" />
+        </TableRow>
 
-        <RadioButton
-            android:id="@+id/radioButton_custommode"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Custom" />
+        <TableRow>
+            <RadioButton
+                android:id="@+id/radioButton_crepemode"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Crepe" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/textView_crepeDefaults"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="32dp"
+                android:layout_weight="1"
+                android:text="Side 1 (secs)" />
+        </TableRow>
 
+        <TableRow>
+            <RadioButton
+                android:id="@+id/radioButton_custommode"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Custom" />
+        </TableRow>
+
+        <TableRow>
             <TextView
                 android:id="@+id/textView_Side1"
                 android:layout_width="wrap_content"
@@ -57,19 +75,15 @@
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:inputType="time" />
-        </LinearLayout>
+        </TableRow>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="32dp"
-            android:orientation="horizontal">
-
+        <TableRow>
             <TextView
                 android:id="@+id/textView_Side2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:layout_marginLeft="32dp"
                 android:text="Side 2 (secs)" />
 
             <EditText
@@ -78,9 +92,9 @@
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:inputType="time" />
-        </LinearLayout>
+        </TableRow>
 
-    </RadioGroup>
+    </com.example.pancaketimer.customviews.RadioGroupTable>
 
     <Button
         android:id="@+id/button_save"
