--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -77,6 +77,23 @@
                 android:inputType="time" />
         </TableRow>
 
+         <TableRow>
+            <TextView
+                android:id="@+id/textView_Flip"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="32dp"
+                android:layout_weight="1"
+                android:text="Flip (secs)" />
+
+            <EditText
+                android:id="@+id/editText_Flip"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:inputType="time" />
+        </TableRow>
+
         <TableRow>
             <TextView
                 android:id="@+id/textView_Side2"
