--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -82,10 +82,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
         android:background="@color/colorPrimary"
-        android:minWidth="190dp"
+        android:minWidth="150dp"
         android:minHeight="70dp"
         android:text="PAUSE"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
@@ -101,10 +101,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginRight="24dp"
         android:background="@color/colorPrimary"
-        android:minWidth="190dp"
+        android:minWidth="150dp"
         android:minHeight="70dp"
         android:text="STOP"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
@@ -118,10 +118,10 @@
         android:id="@+id/textView_mode"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:text=""
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_Start"
-        android:text="" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
