--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimaryPale">#4D009292</color>
+    <color name="colorPrimaryPale">#00DADA</color>
     <color name="colorPrimary">#009292</color>
     <color name="colorPrimaryDark">#004949</color>
     <color name="colorAccent">#ff6db6</color>
+    <color name="colorTextPrimary">#ffffff</color>
+    <color name="colorTextAccent">#00DADA</color>
 </resources>
